--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build --watch",
+    "build": "vite build",
+    "build--watch": "vite build --watch",
     "preview": "vite preview"
   },
   "dependencies": {
