--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
-    "build--watch": "vite build --watch",
+    "build": "tsc && vite build",
+    "build--watch": "tsc && vite build --watch",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,9 +20,11 @@
     "swiper": "^9.0.4"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^5.1.5",
     "vite": "^4.1.0",
     "vite-plugin-imagemin": "^0.6.1"
   }
