--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.2",
     "next": "13.4.7",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "sharp": "^0.32.1",
     "styled-components": "^6.0.1",
