--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "sharp": "^0.32.1",
     "styled-components": "^6.0.1",
     "swiper": "^9.4.1",
