--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "frontend-portfolio-website",
   "version": "0.1.0",
   "private": true,
-  "browserslist": [">0.3%", "not dead", "not op_mini all"],
+  "browserslist": [
+    ">0.3%",
+    "not dead",
+    "not op_mini all"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,15 +22,15 @@
     "framer-motion": "^10.12.18",
     "gsap": "^3.12.2",
     "next": "13.4.7",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "sharp": "^0.32.1",
     "styled-components": "^6.0.1",
     "swiper": "^9.4.1",
     "typescript": "5.1.6"
   }
-  
-  
 }
