--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/button": "0.0.10",
+    "@react-email/components": "^0.0.7",
+    "@react-email/html": "0.0.4",
     "@sendgrid/mail": "^7.7.0",
     "@types/node": "20.3.3",
     "@types/nodemailer": "^6.4.9",
@@ -28,6 +31,7 @@
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
+    "react-email": "1.9.4",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "sharp": "^0.32.1",
