--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/nodemailer": "^6.4.9",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@vercel/analytics": "^1.1.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.18",
@@ -39,6 +40,4 @@
     "swiper": "^9.4.1",
     "typescript": "5.1.6"
   }
-  
-  
 }
