--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-share": "^5.1.0",
-    "sharp": "^0.32.1",
+    "sharp": "^0.32.6",
     "styled-components": "^6.0.1",
     "swiper": "^9.4.1",
+    "thumbhash": "^0.1.1",
     "typescript": "5.1.6"
   }
 }
