--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^10.12.18",
     "isomorphic-dompurify": "^2.7.0",
     "next": "13.4.7",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.4",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
