--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "preview": "next start",
+    "build-preview": "next build && next start",
+    "build-start": "next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
