--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/blob": "^0.23.4",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.18",
