--- a/package.json
+++ b/package.json
@@ -35,12 +35,11 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.18",
     "isomorphic-dompurify": "^2.7.0",
-    "next": "13.4.7",
+    "next": "^13.5.11",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.4",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
-    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-email": "1.9.4",
     "react-hook-form": "^7.45.2",
